# docs/swagger.json
@@ -53,7 +53,7 @@
                 }
             }
         },
-        "/onedep/:depID/file": {
+        "/onedep/{depID}/file": {
             "post": {
                 "description": "Uploading file, and metadata to OneDep API.",
                 "consumes": [
@@ -71,7 +71,7 @@
                         "type": "string",
                         "description": "Deposition ID to which a file should be uploaded",
                         "name": "depID",
-                        "in": "formData",
+                        "in": "path",
                         "required": true
                     },
                     {
@@ -122,7 +122,7 @@
                 }
             }
         },
-        "/onedep/:depID/metadata": {
+        "/onedep/{depID}/metadata": {
             "post": {
                 "description": "Uploading metadata file to OneDep API. This is created by parsing the JSON metadata into the converter.",
                 "consumes": [
@@ -140,7 +140,7 @@
                         "type": "string",
                         "description": "Deposition ID to which a file should be uploaded",
                         "name": "depID",
-                        "in": "formData",
+                        "in": "path",
                         "required": true
                     },
                     {
@@ -153,7 +153,7 @@
                     {
                         "type": "string",
                         "description": "File metadata as a JSON string",
-                        "name": "ScientificMetadata",
+                        "name": "scientificMetadata",
                         "in": "formData",
                         "required": true
                     }
@@ -180,7 +180,7 @@
                 }
             }
         },
-        "/onedep/:depID/pdb": {
+        "/onedep/{depID}/pdb": {
             "post": {
                 "description": "Uploading file to OneDep API.",
                 "consumes": [
@@ -198,7 +198,7 @@
                         "type": "string",
                         "description": "Deposition ID to which a file should be uploaded",
                         "name": "depID",
-                        "in": "formData",
+                        "in": "path",
                         "required": true
                     },
                     {
@@ -218,7 +218,7 @@
                     {
                         "type": "string",
                         "description": "File metadata as a JSON string",
-                        "name": "ScientificMetadata",
+                        "name": "scientificMetadata",
                         "in": "formData",
                         "required": true
                     }
@@ -245,7 +245,7 @@
                 }
             }
         },
-        "/onedep/:depID/process": {
+        "/onedep/{depID}/process": {
             "post": {
                 "description": "Process a deposition in OneDep API.",
                 "consumes": [
@@ -263,7 +263,7 @@
                         "type": "string",
                         "description": "Deposition ID to which a file should be uploaded",
                         "name": "depID",
-                        "in": "formData",
+                        "in": "path",
                         "required": true
                     },
                     {
